--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build_serve": "ng build --prod tb-dropfile-lib && ng serve",
+    "build_lib": "ng build --prod tb-dropfile-lib",
+    "npm_pack": "cd dist/tb-dropfile-lib && npm pack",
+    "build_pack": "ng build --prod tb-dropfile-lib && npm run npm_pack"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/material": "^6.0.3",
+    "@angular/cdk": "^6.0.3",
+    "@angular/animations": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
@@ -22,11 +28,16 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "exif-js": "2.3.0"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular-devkit/build-angular": "~0.6.8",
+    "ng-packagr": "^3.0.0-rc.2",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
     "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
     "@angular/language-service": "^6.0.3",
