update library peerDependencies versions + lib version

--- a/projects/tb-dropfile-lib/package.json
+++ b/projects/tb-dropfile-lib/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tb-dropfile-lib",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "peerDependencies": {
-    "@angular/common": "^6.x",
-    "@angular/core": "^6.x",
-    "@angular/material": "^6.x",
-    "@angular/cdk": "^6.x",
+    "@angular/common": "6.0 - 7.2",
+    "@angular/core": "6.0 - 7.2",
+    "@angular/material": "6.0 - 7.3",
+    "@angular/cdk": "6.0 - 7.2",
     "exif-js": "2.3.0"
   }
 }
